Fix to exclude menus that have no definition in MessageResource